--- a/Front_End/assets/css/Style.css
+++ b/Front_End/assets/css/Style.css
@@ -8,16 +8,16 @@
     padding: 0px;
 }
 .logo img{
-width: 40px;
+width: 42px;
 }
 .header{
     background: #eeeff1;
 }
 .nav a{
+    font-size: 20px;
  color:black;
     font-weight: 500;
-
-}
+    font-family: 'DM Sans', sans-serif;}
 
 
 .navbar1 ul li {
@@ -32,7 +32,7 @@ display: inline-block;
     color: black;
     font-weight: 500;
     text-decoration: none;
-}
+    font-family: 'DM Sans', sans-serif ;}
 .navbar1 ul li a::after{
     content: '';
     width: 0%;
@@ -45,4 +45,59 @@ display: inline-block;
 }
 .navbar1 ul li a:hover::after {
     width: 100%;
+}
+#homeimg{
+    background: url("/assets/img/web/Car Website – 1@2x.png");
+    background-size: cover;
+    background-position: right;
+}
+#home {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    margin: 0px;
+    z-index: 10;
+border-top: 1px solid black;
+    background: url("/assets/img/web/Car Website – 1@2x.png");
+    background-size: cover;
+
+}
+#signin:hover{
+    background-color: orange;
+}
+#headrH3{
+
+    font-family: cursive;
+    color:#0c5460;
+    right: 50px;
+}
+#headrH3 span{
+    color: darkorange;
+}
+
+#homeTitle{
+    top: 120px;
+    right: 28px;
+}
+#hometitle1{
+    color: orange;
+    font-size: 60px;
+}
+#homeTitel2{
+    bottom: 60px;
+    font-size: 40px;
+}
+
+#homeTitel3{
+    bottom: 70px;
+}
+#homeimg1{
+bottom: 60px;
+right: 20px;
+
+}
+#homeimg2{
+    bottom: 60px;
+    right: 120px;
+
 }
